modified to use URI instead of URL